fix hamburger menu spacing in navbar

--- a/src/stylesheets/contact.css
+++ b/src/stylesheets/contact.css
@@ -19,3 +19,10 @@
  #contact img {
      border: 2px solid black;
  }
+
+ @media (max-width: 580px){
+    #social {
+        margin-bottom: 1.5rem;
+    }
+
+ }
