--- a/src/stylesheets/nav.css
+++ b/src/stylesheets/nav.css
@@ -1,7 +1,9 @@
 nav {
     display: flex;
+    flex-direction: row;
     padding: 0;
     width: 100%;
+    right: 0;
     height: 3.5rem;
     position: fixed;
     font-family: 'Didact Gothic', sans-serif;
@@ -18,6 +20,13 @@ nav {
     margin-right: 2rem;
 }
 
+.navbar-toggler {
+    margin: 0;
+    padding-bottom: .25;
+    padding: 0;
+    /* margin-right: 0;  */
+
+}
 .navbar .navbar-nav li a:hover {
     color: rgb(200, 0, 50);
 }
@@ -34,17 +43,4 @@ nav {
     text-decoration: none;
     color: rgb(200, 0, 50);
 }
-
-/* nav li {
-    margin: 0 15px;
-    list-style: none;
-}
-
-nav li:first-child {
-    margin-left: 0;
-}
-
-nav li:last-child {
-    margin-right: 60px;
-}  */
 
